<resources>
    <string name="app_name">HackNote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">下載</string>
    <string name="upload">上傳</string>
    <string name="setting">設定</string>
    <string name="send">送出</string>
    <string name="token_info">在這裡貼上 HackMD 的 Token</string>
</resources>