<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="NoteViewModel"
            type="com.example.hacknote.note.NoteViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

                <!--滑動消失區-->

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="0dp"
                        android:layout_height="64dp"
                        android:background="@color/hexColor035_RoyalBlue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <Button
                        android:id="@+id/setting"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_margin="8dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/setting"
                        app:icon="@drawable/ic_baseline_settings_24"
                        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/upload"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_margin="8dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/upload"
                        app:icon="@drawable/ic_baseline_cloud_upload_24"
                        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                        app:layout_constraintEnd_toStartOf="@+id/download"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/download"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_margin="8dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/download"
                        app:icon="@drawable/ic_baseline_cloud_download_24"
                        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <!--固定顯示區-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!--上下卷動區-->

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@color/hexColor085_LightGoldenrodYellow"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:text="臣亮言：先帝創業未半，而中道崩殂。今天下三分，益州疲敝，此誠危急存亡之秋也！然侍衞之臣，不懈於內；忠志之士，忘身於外者，蓋追先帝之殊遇，欲報之於陛下也。誠宜開張聖聽，以光先帝遺德，恢弘志士之氣；不宜妄自菲薄，引喻失義，以塞忠諫之路也。"
                android:textColor="@color/metroColor001_252525"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                tools:ignore="LabelFor" />

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>